<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <!-- Nom de l'application -->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <!-- Champ utilisateur -->
    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/utilisateur"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="username"
        tools:ignore="textFields,VisualLintTextFieldSize"/>

    <!-- Champ mot de passe -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Bouton connexion -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>